# message_queue

./: .env  .gitignore  docker-compose.yaml  pyproject.toml
src/: consumer.py  main.py
src/api/v1/: router.py
src/core/: config.py  rabbit_connection.py
src/core/utils/: logging_config.py
